# hazakura-vectorizer

./: .gitignore  CHANGELOG.md  HAZKURA_HANDOFF.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  hazakura-vectorizer-tauri-plan.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
scripts/: verify-release.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: vtracer-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/cli/: mod.rs  vtracer.rs
src-tauri/src/commands/: export.rs  mod.rs  vectorize.rs
src/components/: BackgroundControls.tsx  DropZone.tsx  ExportButtons.tsx  PresetSelector.tsx  PreviewPane.tsx  ThemeToggle.tsx  Toast.tsx  VectorizeOptions.tsx
src/lib/: cutout.ts  imageLoad.ts  pngExport.ts  presets.ts  svgVariants.ts  tauriInvoke.ts  types.ts
src/styles/: app.css  base.css  themes.css  tokens.css
