[package]
name = "hazakura-vectorizer"
version = "0.1.0"
description = "Local Tauri app for turning raster logos into reusable SVG/PNG assets"
authors = ["Hazakura <https://github.com/lero003/hazakura-vectorizer>"]
license = "MIT"
repository = "https://github.com/lero003/hazakura-vectorizer"
homepage = "https://github.com/lero003/hazakura-vectorizer"
edition = "2021"
rust-version = "1.77"

[lib]
name = "hazakura_vectorizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
base64 = "0.22"
